# Simulacrum

./: .gitignore  Cargo.lock.REMOVED.git-id  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: main.ldtk  placeholder_robot.png.REMOVED.git-id
assets/Mossy Tileset/: Mossy - BackgroundDecoration.png.REMOVED.git-id  Mossy - Decorations&Hazards.png.REMOVED.git-id  Mossy - FloatingPlatforms.png.REMOVED.git-id  Mossy - Hanging Plants.png.REMOVED.git-id  Mossy - MossyHills.png.REMOVED.git-id  Mossy - TileSet.png.REMOVED.git-id
assets/dialogue/: intro.yarn
assets/levels/: main.ldtk
src/: camera.rs  collectable.rs  general_movement.rs  ldtk.rs  lib.rs  main.rs  mouse.rs  physics.rs  plugins.rs  prelude.rs  setup.rs  wall.rs
src/player/: health.rs  input.rs  jump.rs  mod.rs  movement.rs  run.rs
src/player/weapons/: attack.rs  mod.rs
src/robot/: enemy.rs  health.rs  hits.rs  mod.rs  ui.rs
src/robot/player/: input.rs  mod.rs  movement.rs
src/robot/player/weapons/: attack.rs  input.rs  melee.rs  mod.rs
src/robot/player/weapons/ranged/: general_ranged.rs  grappling_hook.rs  mod.rs  rocket_launcher.rs  shoot.rs
src/weapons/: attack.rs  melee.rs  mod.rs  weapon_input.rs
src/weapons/ranged/: general_ranged.rs  grappling_hook.rs  mod.rs  rocket_launcher.rs  shoot.rs
