cargo-features = ["codegen-backend"]
[package]
name = "no-mouth"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "*", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "wayland",
] }
tracing = {version = "*", features = ["max_level_debug", "release_max_level_warn"]}
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
avian2d = "*"
bevy_framepace = "*"
bevy_seedling = "*"
dogoap = "*"
bevy_enhanced_input = {git = "https://github.com/Lenchog/linear-input-modifier"}
bevy-inspector-egui = "*"
bevy_yarnspinner = "*"
bevy_yarnspinner_example_dialogue_view = "*"
iyes_perf_ui = "*"
bevy_ecs_ldtk = "*"
bevy_simple_subsecond_system = "*"
bevy_trauma_shake = "*"

[features]
default = [	
  "bevy/file_watcher",
  "bevy/embedded_watcher",
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  "bevy/track_location",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"]}
stable_features = "allow"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[profile.dev]
opt-level = 1 

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4
