cargo-features = ["codegen-backend"]
[package]
name = "simulacrum"
version = "0.1.3"
edition = "2024"

[dependencies]
bevy = { version = "*", default-features = false, features = [
  "bevy_asset",
  "bevy_color",
  "bevy_gizmos",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "tonemapping_luts",
  "wayland",
  "webgpu",
] }
tracing = {version = "*", features = ["max_level_info", "release_max_level_error"]}
log = { version = "*", features = ["max_level_info", "release_max_level_error"] }
avian2d = {git = "https://github.com/Jondolf/avian"}
bevy_framepace = "*"
bevy_seedling = "*"
bevy_enhanced_input = "*"
bevy-inspector-egui = "*"
bevy_yarnspinner = "0.6.0-rc"
bevy_yarnspinner_example_dialogue_view = "0.6.0-rc"
# iyes_perf_ui = "*"
bevy_ecs_ldtk = {git = "https://github.com/lenchog/bevy_ecs_ldtk"}
bevy_trauma_shake = "*"
# bevy_light_2d = "*"
bevy-tnua-avian2d = {git = "https://github.com/janhohenheim/bevy-tnua/", branch = "bevy-0.17.0-dev"}
bevy_hanabi = {git = "https://github.com/djeedai/bevy_hanabi/", branch = "u/bevy17"}

[features]
default = [	
  "bevy/file_watcher",
  "bevy/embedded_watcher",
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  "bevy/track_location",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"]}
stable_features = "allow"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[profile.dev]
opt-level = 1 

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4
