cargo-features = ["codegen-backend"]
[package]
name = "simulacrum"
version = "0.1.3"
edition = "2024"

[patch.crates-io]
avian2d = { git = "https://github.com/avianphysics/avian"}

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_asset",
  "bevy_color",
  "bevy_gizmos",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "bevy_winit",
  "bevy_post_process",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "tonemapping_luts",
  "wayland",
  "webgpu",
] }
bevy_post_process = { version = "0.17" }
tracing = {version = "*", features = ["max_level_info", "release_max_level_error"]}
log = { version = "*", features = ["max_level_info", "release_max_level_error"] }
avian2d = "0.4"
bevy_framepace = {git = "https://github.com/aevyrie/bevy_framepace"}
bevy_seedling = "0.6.0-rc.1"
bevy_enhanced_input = "*"
bevy-inspector-egui = "*"
bevy_yarnspinner = "0.6"
bevy_yarnspinner_example_dialogue_view = "0.6.0"
iyes_perf_ui = {git = "https://github.com/mgi388/iyes_perf_ui/", branch = "bevy-0.17"}
#bevy_ecs_ldtk = {git = "https://github.com/Hellzbellz123/bevy_ecs_ldtk", branch = "lenchog/0.17-collab"}
bevy_ecs_ldtk = "0.13"
bevy_trauma_shake = "*"
bevy_light_2d = "0.8"
bevy-tnua-avian2d = "0.8"
bevy-tnua = "0.26"
bevy_hanabi = "0.17"

[features]
default = [	
  "bevy/file_watcher",
  "bevy/embedded_watcher",
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  "bevy/track_location",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"]}
stable_features = "allow"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

[profile.dev]
opt-level = 1 

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4
